--- a/Labs/module_1/3. Dicts-Sets-Tuples/your-code/challenge-2.ipynb
+++ b/Labs/module_1/3. Dicts-Sets-Tuples/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[29,\n",
+       " 97,\n",
+       " 89,\n",
+       " 52,\n",
+       " 96,\n",
+       " 31,\n",
+       " 34,\n",
+       " 87,\n",
+       " 58,\n",
+       " 38,\n",
+       " 26,\n",
+       " 75,\n",
+       " 54,\n",
+       " 11,\n",
+       " 80,\n",
+       " 23,\n",
+       " 0,\n",
+       " 27,\n",
+       " 7,\n",
+       " 44,\n",
+       " 35,\n",
+       " 12,\n",
+       " 18,\n",
+       " 71,\n",
+       " 43,\n",
+       " 69,\n",
+       " 3,\n",
+       " 76,\n",
+       " 90,\n",
+       " 25,\n",
+       " 95,\n",
+       " 99,\n",
+       " 63,\n",
+       " 21,\n",
+       " 45,\n",
+       " 49,\n",
+       " 64,\n",
+       " 78,\n",
+       " 93,\n",
+       " 22,\n",
+       " 66,\n",
+       " 77,\n",
+       " 79,\n",
+       " 85,\n",
+       " 20,\n",
+       " 84,\n",
+       " 39,\n",
+       " 73,\n",
+       " 15,\n",
+       " 94,\n",
+       " 74,\n",
+       " 1,\n",
+       " 56,\n",
+       " 32,\n",
+       " 88,\n",
+       " 51,\n",
+       " 4,\n",
+       " 61,\n",
+       " 60,\n",
+       " 55,\n",
+       " 42,\n",
+       " 92,\n",
+       " 10,\n",
+       " 65,\n",
+       " 14,\n",
+       " 72,\n",
+       " 5,\n",
+       " 17,\n",
+       " 46,\n",
+       " 37,\n",
+       " 9,\n",
+       " 50,\n",
+       " 30,\n",
+       " 82,\n",
+       " 81,\n",
+       " 16,\n",
+       " 59,\n",
+       " 33,\n",
+       " 70,\n",
+       " 91]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1 = random.sample(range(101), 80)\n",
+    "sample_list_1"
    ]
   },
   {
@@ -54,11 +146,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = set(sample_list_1)\n",
+    "len(set1)\n",
+    "\n",
+    "# Yes, the lenght is still 80 because the random.sample method does not allow repetitions."
    ]
   },
   {
@@ -77,11 +184,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[76,\n",
+       " 10,\n",
+       " 90,\n",
+       " 62,\n",
+       " 5,\n",
+       " 98,\n",
+       " 64,\n",
+       " 61,\n",
+       " 81,\n",
+       " 7,\n",
+       " 10,\n",
+       " 6,\n",
+       " 48,\n",
+       " 3,\n",
+       " 18,\n",
+       " 51,\n",
+       " 1,\n",
+       " 33,\n",
+       " 37,\n",
+       " 88,\n",
+       " 79,\n",
+       " 67,\n",
+       " 35,\n",
+       " 31,\n",
+       " 37,\n",
+       " 80,\n",
+       " 7,\n",
+       " 75,\n",
+       " 28,\n",
+       " 9,\n",
+       " 35,\n",
+       " 14,\n",
+       " 74,\n",
+       " 80,\n",
+       " 62,\n",
+       " 40,\n",
+       " 32,\n",
+       " 80,\n",
+       " 38,\n",
+       " 92,\n",
+       " 64,\n",
+       " 10,\n",
+       " 32,\n",
+       " 42,\n",
+       " 7,\n",
+       " 5,\n",
+       " 2,\n",
+       " 73,\n",
+       " 27,\n",
+       " 73,\n",
+       " 67,\n",
+       " 36,\n",
+       " 57,\n",
+       " 15,\n",
+       " 32,\n",
+       " 40,\n",
+       " 10,\n",
+       " 96,\n",
+       " 73,\n",
+       " 57,\n",
+       " 27,\n",
+       " 24,\n",
+       " 80,\n",
+       " 73,\n",
+       " 42,\n",
+       " 42,\n",
+       " 77,\n",
+       " 26,\n",
+       " 0,\n",
+       " 92,\n",
+       " 20,\n",
+       " 98,\n",
+       " 58,\n",
+       " 94,\n",
+       " 93,\n",
+       " 26,\n",
+       " 14,\n",
+       " 53,\n",
+       " 27,\n",
+       " 6]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2 = []\n",
+    "for i in range(80):\n",
+    "    sample_list_2 += random.sample(range(101), 1)\n",
+    "sample_list_2"
    ]
   },
   {
@@ -93,11 +294,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "len(set2)\n",
+    "\n",
+    "# No it's not 80 anymore, since the numbers can be repeated."
    ]
   },
   {
@@ -109,11 +325,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{4,\n",
+       " 11,\n",
+       " 12,\n",
+       " 16,\n",
+       " 17,\n",
+       " 21,\n",
+       " 22,\n",
+       " 23,\n",
+       " 25,\n",
+       " 29,\n",
+       " 30,\n",
+       " 34,\n",
+       " 39,\n",
+       " 43,\n",
+       " 44,\n",
+       " 45,\n",
+       " 46,\n",
+       " 49,\n",
+       " 50,\n",
+       " 52,\n",
+       " 54,\n",
+       " 55,\n",
+       " 56,\n",
+       " 59,\n",
+       " 60,\n",
+       " 63,\n",
+       " 65,\n",
+       " 66,\n",
+       " 69,\n",
+       " 70,\n",
+       " 71,\n",
+       " 72,\n",
+       " 78,\n",
+       " 82,\n",
+       " 84,\n",
+       " 85,\n",
+       " 87,\n",
+       " 89,\n",
+       " 91,\n",
+       " 95,\n",
+       " 97,\n",
+       " 99}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3 = set1 - set2\n",
+    "set3"
    ]
   },
   {
@@ -125,11 +395,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 6, 24, 28, 36, 40, 48, 53, 57, 62, 67, 98}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = set2 - set1\n",
+    "set4"
    ]
   },
   {
@@ -141,11 +424,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0,\n",
+       " 1,\n",
+       " 3,\n",
+       " 5,\n",
+       " 7,\n",
+       " 9,\n",
+       " 10,\n",
+       " 14,\n",
+       " 15,\n",
+       " 18,\n",
+       " 20,\n",
+       " 26,\n",
+       " 27,\n",
+       " 31,\n",
+       " 32,\n",
+       " 33,\n",
+       " 35,\n",
+       " 37,\n",
+       " 38,\n",
+       " 42,\n",
+       " 51,\n",
+       " 58,\n",
+       " 61,\n",
+       " 64,\n",
+       " 73,\n",
+       " 74,\n",
+       " 75,\n",
+       " 76,\n",
+       " 77,\n",
+       " 79,\n",
+       " 80,\n",
+       " 81,\n",
+       " 88,\n",
+       " 90,\n",
+       " 92,\n",
+       " 93,\n",
+       " 94,\n",
+       " 96}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = set1 & set2\n",
+    "#set5 = set1.intersection(set2)\n",
+    "set5"
    ]
   },
   {
@@ -165,11 +499,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80, 50, 42, 12, 38)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "len(set1), len(set2), len(set3), len(set4), len(set5)\n",
+    "\n",
+    "# len(set5) is the intersection between both set1 and set2\n",
+    "# len(set3) is only the values of set1 not present in set2\n",
+    "# len(set4) is only the values of set2 not present in set1\n",
+    "\n",
+    "# Therefore:\n",
+    "# len(set1) = len(set3) + len(set5) --> Because set1 = set3 + set5\n",
+    "# len(set2) = len(set4) + len(set5) --> Because set2 = set4 + set5"
    ]
   },
   {
@@ -181,11 +535,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6 = set()"
    ]
   },
   {
@@ -197,11 +552,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0,\n",
+       " 1,\n",
+       " 3,\n",
+       " 4,\n",
+       " 5,\n",
+       " 7,\n",
+       " 9,\n",
+       " 10,\n",
+       " 11,\n",
+       " 12,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 17,\n",
+       " 18,\n",
+       " 20,\n",
+       " 21,\n",
+       " 22,\n",
+       " 23,\n",
+       " 25,\n",
+       " 26,\n",
+       " 27,\n",
+       " 29,\n",
+       " 30,\n",
+       " 31,\n",
+       " 32,\n",
+       " 33,\n",
+       " 34,\n",
+       " 35,\n",
+       " 37,\n",
+       " 38,\n",
+       " 39,\n",
+       " 42,\n",
+       " 43,\n",
+       " 44,\n",
+       " 45,\n",
+       " 46,\n",
+       " 49,\n",
+       " 50,\n",
+       " 51,\n",
+       " 52,\n",
+       " 54,\n",
+       " 55,\n",
+       " 56,\n",
+       " 58,\n",
+       " 59,\n",
+       " 60,\n",
+       " 61,\n",
+       " 63,\n",
+       " 64,\n",
+       " 65,\n",
+       " 66,\n",
+       " 69,\n",
+       " 70,\n",
+       " 71,\n",
+       " 72,\n",
+       " 73,\n",
+       " 74,\n",
+       " 75,\n",
+       " 76,\n",
+       " 77,\n",
+       " 78,\n",
+       " 79,\n",
+       " 80,\n",
+       " 81,\n",
+       " 82,\n",
+       " 84,\n",
+       " 85,\n",
+       " 87,\n",
+       " 88,\n",
+       " 89,\n",
+       " 90,\n",
+       " 91,\n",
+       " 92,\n",
+       " 93,\n",
+       " 94,\n",
+       " 95,\n",
+       " 96,\n",
+       " 97,\n",
+       " 99}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "set6"
    ]
   },
   {
@@ -213,11 +661,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 == set6"
    ]
   },
   {
@@ -229,11 +689,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, True)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1.issubset(set2), set3.issubset(set1)"
    ]
   },
   {
@@ -247,11 +719,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set.union(set3, set4, set5) == set1.union(set2)"
    ]
   },
   {
@@ -263,11 +747,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 3, 4, 5, 7, 9, 10, 11, 12, 14, 15, 16, 17, 18, 20, 21, 22, 23, 25, 26, 27, 29, 30, 31, 32, 33, 34, 35, 37, 38, 39, 42, 43, 44, 45, 46, 49, 50, 51, 52, 54, 55, 56, 58, 59, 60, 61, 63, 64, 65, 66, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 84, 85, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 99}\n",
+      "{1, 3, 4, 5, 7, 9, 10, 11, 12, 14, 15, 16, 17, 18, 20, 21, 22, 23, 25, 26, 27, 29, 30, 31, 32, 33, 34, 35, 37, 38, 39, 42, 43, 44, 45, 46, 49, 50, 51, 52, 54, 55, 56, 58, 59, 60, 61, 63, 64, 65, 66, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 84, 85, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set1)\n",
+    "set1.pop()\n",
+    "print(set1)"
    ]
   },
   {
@@ -283,12 +779,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 5, 7, 10, 12, 14, 15, 16, 17, 18, 20, 22, 23, 25, 26, 27, 30, 32, 33, 34, 35, 37, 38, 42, 43, 44, 45, 46, 50, 52, 54, 55, 56, 58, 60, 63, 64, 65, 66, 70, 72, 73, 74, 75, 76, 77, 78, 80, 82, 84, 85, 87, 88, 90, 92, 93, 94, 95, 96, 97}\n",
+      "\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "for item in list_to_remove:\n",
+    "    if item in set1:\n",
+    "        set1.remove(item)\n",
+    "\n",
+    "print(set1)\n",
+    "print()\n",
+    "print(len(set1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
