Week 1 - Day 3 - Labs

--- a/Labs/module_1/5. String-Operations/your-code/main.ipynb
+++ b/Labs/module_1/5. String-Operations/your-code/main.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "'The area of the circle with radius: 4.5,  is: 63.61725123519331'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,10 +179,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5, is: 63.61725123519331\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{string1} {radius}, {string2} {circle(radius)}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -360,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +390,6 @@
        " 'end',\n",
        " 'fears',\n",
        " 'foe',\n",
-       " 'foe:',\n",
        " 'friend',\n",
        " 'garden',\n",
        " 'glad',\n",
@@ -404,7 +413,7 @@
        " 'soft',\n",
        " 'stole',\n",
        " 'sunned',\n",
-       " 'tears:',\n",
+       " 'tears',\n",
        " 'that',\n",
        " 'till',\n",
        " 'told',\n",
@@ -418,7 +427,7 @@
        " 'wrath'}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +456,7 @@
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
     "# Your code here:\n",
-    "{word for word in poem.lower().replace(\".\",\"\").replace(\",\",\"\").replace(\";\",\"\").split() if word not in blacklist}\n"
+    "{word for word in poem.lower().replace(\".\",\"\").replace(\",\",\"\").replace(\";\",\"\").replace(\":\",\"\").split() if word not in blacklist}\n"
    ]
   }
  ],
