--- a/Projects/Week-1/your-project/Blackjack Game.ipynb
+++ b/Projects/Week-1/your-project/Blackjack Game.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random"
+    "import random\n",
+    "import os.path"
    ]
   },
   {
@@ -75,9 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "dirname() missing 1 required positional argument: 'p'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-1e575f476d91>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdirname\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: dirname() missing 1 required positional argument: 'p'"
+     ]
+    }
+   ],
    "source": [
     "#for i in range(52):\n",
     "pictures = {'2♠': '2♠.jpg'}\n",
@@ -85,7 +98,21 @@
     "filename = pictures['2♠']\n",
     "\n",
     "with open(filename, 'rb') as f:\n",
-    "    f.read()"
+    "    image = f.read()\n",
+    "\n",
+    "os.path.dirname()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    img  = Image.open(path)  \n",
+    "except IOError: \n",
+    "    pass"
    ]
   },
   {
