images in the right directory

--- a/Projects/Week-1/your-project/Blackjack Game.ipynb
+++ b/Projects/Week-1/your-project/Blackjack Game.ipynb
@@ -11,10 +11,24 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ipyplot'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-52b9472aeb48>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mipyplot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#import os.path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ipyplot'"
+     ]
+    }
+   ],
    "source": [
+    "from IPython.display import Image\n",
+    "import ipyplot\n",
     "import random\n",
-    "import os.path"
+    "#import os.path"
    ]
   },
   {
@@ -26,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,26 +85,14 @@
     "\n",
     "    deck[\"A\"+i] = \"choose\"\n",
     "\n",
-    "cards = list(deck.keys())"
+    "cards = list(deck.keys())\n",
+    "\n",
+    "ipyplot.plot_images(cards, max_images=20, img_width=150)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "dirname() missing 1 required positional argument: 'p'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-1e575f476d91>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdirname\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: dirname() missing 1 required positional argument: 'p'"
-     ]
-    }
-   ],
    "source": [
     "#for i in range(52):\n",
     "pictures = {'2♠': '2♠.jpg'}\n",
@@ -98,20 +100,40 @@
     "filename = pictures['2♠']\n",
     "\n",
     "with open(filename, 'rb') as f:\n",
-    "    image = f.read()\n",
-    "\n",
-    "os.path.dirname()"
+    "    image = f.read()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "import os\n",
+    "print(os.system('2♠.jpg'))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "import webbrowser\n",
+    "webbrowser.open('/Users/oleoaraujo/Documents/GitHub/data-ft-par-labs/Projects/Week-1/your-project/2♠.jpg')"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#Image(filename='2♠.jpg')\n",
+    "Image(filename='2♠.jpg', width=100)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "try:\n",
-    "    img  = Image.open(path)  \n",
-    "except IOError: \n",
+    "    img = Image.open(path)\n",
+    "except IOError:\n",
     "    pass"
    ]
   },
@@ -124,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,10 +359,12 @@
     "    if draw_or_stop == \"DRAW\":\n",
     "        player_card = choice_of_cards(cards)\n",
     "        print(f\"Here's the card : {player_card}.\\n\")\n",
+    "        #Image(filename='2♠.jpg', width=100)\n",
     "        \n",
     "        # Drawing a card from the deck: removing it from the deck and allocating it to the player:\n",
     "        cards = cards.remove(player_card)\n",
     "        player_cards.append(player_card)\n",
+    "        ipyplot.plot_images(player_cards, max_images=20, img_width=150)\n",
     "\n",
     "        # Score updates\n",
     "        player_scores.append(card_points(player_card))\n",
@@ -351,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,6 +390,7 @@
     "        print(\"**CPU TURN:**\")\n",
     "        print(\"A new card has been drawn to the CPU.\")\n",
     "        print(f\"Here's the card : {cpu_card}\\n\")\n",
+    "        Image(filename=cpu_card+'.jpg', width=100)\n",
     "        \n",
     "        cards = cards.remove(cpu_card)\n",
     "        cpu_cards.append(cpu_card)\n",
@@ -384,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,52 +535,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Choose the number of decks you would like to play with (from 1 to 8): \n",
-      "&\n",
-      "Please, try again. You need to choose an integer between 1 and 8 for the number of decks:\n",
-      "1\n",
-      "Please, try again. You need to choose an integer between 1 and 8 for the number of decks:\n",
-      "1\n",
-      "\n",
-      "Nice choice! Your deck has then 52 CARDS and here are the cards in yout full deck:\n",
-      "['2♠', '3♠', '4♠', '5♠', '6♠', '7♠', '8♠', '9♠', '10♠', 'J♠', 'Q♠', 'K♠', 'A♠', '2♥', '3♥', '4♥', '5♥', '6♥', '7♥', '8♥', '9♥', '10♥', 'J♥', 'Q♥', 'K♥', 'A♥', '2♦', '3♦', '4♦', '5♦', '6♦', '7♦', '8♦', '9♦', '10♦', 'J♦', 'Q♦', 'K♦', 'A♦', '2♣', '3♣', '4♣', '5♣', '6♣', '7♣', '8♣', '9♣', '10♣', 'J♣', 'Q♣', 'K♣', 'A♣']\n",
-      "\n",
-      "\n",
-      "Press Enter to continue... Or Q to quit.\n",
-      "\n",
-      "------------------------------------ TURN 1 ------------------------------------\n",
-      "**PLAYER TURN:**\n",
-      "For this a new card has automatically been drawn to the player by the dealer (CPU).\n",
-      "Here's the card : 5♦.\n",
-      "\n",
-      "**CPU TURN:**\n",
-      "A new card has been drawn to the CPU.\n",
-      "Here's the card : 10♠\n",
-      "\n",
-      "\n",
-      "Press Enter to continue... Or Q to quit.\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'check_winner' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-1d7c62812912>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mcpu_turn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mturn_number\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mcheck_winner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mturn_number\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mcpu_total_score\u001b[0m \u001b[0;34m>=\u001b[0m\u001b[0;36m16\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mdraw_or_stop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcasefold\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"STOP\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'check_winner' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Looping each ROUND of play\n",
     "while game_break == False:\n",
