Blackjack game version 3

--- a/Projects/Week-1/your-project/Blackjack Game_v2.ipynb
+++ b/Projects/Week-1/your-project/Blackjack Game_v2.ipynb
@@ -11,24 +11,33 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ipyplot'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-52b9472aeb48>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mipyplot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#import os.path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ipyplot'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from IPython.display import Image\n",
+    "from IPython.display import Image, display\n",
     "import ipyplot\n",
     "import random\n",
-    "#import os.path"
+    "from art import tprint\n",
+    "import cv2\n",
+    "import glob\n",
+    "import numpy as np\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "from IPython.display import Image\n",
+    "leo = \"leo\"\n",
+    "Image(filename='9♥.jpg', width = 100)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "from PIL import Image\n",
+    "im = Image.open('9♥.jpg')"
    ]
   },
   {
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +72,15 @@
     "cpu_scores = []\n",
     "\n",
     "player_total_score = 0\n",
-    "cpu_total_score = 0"
+    "cpu_total_score = 0\n",
+    "\n",
+    "player_money = 0\n",
+    "cpu_money = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,56 +97,34 @@
     "\n",
     "    deck[\"A\"+i] = \"choose\"\n",
     "\n",
-    "cards = list(deck.keys())\n",
+    "cards = list(deck.keys())"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "import cv2\n",
+    "import glob\n",
+    "import numpy as np\n",
     "\n",
-    "ipyplot.plot_images(cards, max_images=20, img_width=150)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "#for i in range(52):\n",
-    "pictures = {'2♠': '2♠.jpg'}\n",
+    "cards_images = []\n",
+    "files = glob.glob(\"/Users/oleoaraujo/Documents/Github/data-ft-par-labs/Projects/Week-1/your-project/*.jpg\")\n",
+    "for myFile in files:\n",
+    "    print(myFile)\n",
+    "    image = cv2.imread(myFile)\n",
+    "    cards_images.append(image)\n",
     "\n",
-    "filename = pictures['2♠']\n",
-    "\n",
-    "with open(filename, 'rb') as f:\n",
-    "    image = f.read()"
+    "print(type(cards_images[0]))\n",
+    "print('cards_images shape:', np.array(type(cards_images)))"
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "import os\n",
-    "print(os.system('2♠.jpg'))"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "import webbrowser\n",
-    "webbrowser.open('/Users/oleoaraujo/Documents/GitHub/data-ft-par-labs/Projects/Week-1/your-project/2♠.jpg')"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "#Image(filename='2♠.jpg')\n",
-    "Image(filename='2♠.jpg', width=100)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "try:\n",
-    "    img = Image.open(path)\n",
-    "except IOError:\n",
-    "    pass"
+    "import ipyplot\n",
+    "ipyplot.plot_images(cards_images, max_images=20, img_width=50)"
    ]
   },
   {
@@ -146,7 +136,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def welcome_screen():\n",
+    "    tprint(\"BLACK\",font=\"block\")\n",
+    "    tprint(\"JACK\",font=\"block\")\n",
+    "    hello = '''Are you ready for'''\n",
+    "    for part in hello.split('\\n'):\n",
+    "        print(f'{part.upper():^120}')\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,14 +170,16 @@
     "    draw_or_stop = \"DRAW\"\n",
     "    \n",
     "    cards = []\n",
-    "\n",
+    "    \n",
     "    player_cards = []\n",
     "    player_scores = []\n",
     "    player_total_score = 0\n",
+    "    player_money = 0\n",
     "    \n",
     "    cpu_cards = []\n",
     "    cpu_scores = []\n",
     "    cpu_total_score = 0\n",
+    "\n",
     "    \n",
     "    number_of_decks_used = input(\"Choose the number of decks you would like to play with (from 1 to 8): \\n\")\n",
     "    \n",
@@ -188,9 +195,10 @@
     "    for i in range(number_of_decks_used):\n",
     "        cards += list(deck.keys())\n",
     "    \n",
-    "    print(f\"\\nNice choice! Your deck has then {len(cards)} CARDS and here are the cards in yout full deck:\")\n",
+    "    print(f\"\\nNice choice! Your deck has then {len(cards)} CARDS and here are the cards in your full deck:\")\n",
     "    print(cards)\n",
-    "    print()\n",
+    "    \n",
+    "    time.sleep(1)\n",
     "    \n",
     "    option_quit_game()\n",
     "    \n",
@@ -199,23 +207,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bets():\n",
+    "    if player_money == 0 & cpu_money == 0:\n",
+    "        cpu_money = player_money = input(\"Place the money that you want to place to your pot: \")\n",
+    "    \n",
+    "    print(f\"You have {player_money}$ available for betting\")\n",
+    "    \n",
+    "    flag == True\n",
+    "    \n",
+    "    while player_bet != 0 and cpu_bet != 0 and flag == True:\n",
+    "        try:\n",
+    "            bet = int(input(f\"Place your bet for the round {round_number} and turn {turn_number} : \"))\n",
+    "            if int(bet) != bet:\n",
+    "                Flag == True\n",
+    "            else:\n",
+    "                flag == False\n",
+    "        except:\n",
+    "            print(\"You should input a number for the bet. Please, try again.\")\n",
+    "    \n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def choice_of_cards(cards=cards):\n",
+    "    \"\"\"\n",
+    "    Function randomly choosing a card for the player or the CPU.\n",
+    "    \"\"\"\n",
     "    chosen_card = random.choices(cards)\n",
     "    return chosen_card[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def option_quit_game():\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    Function to give the player the option to continue the game or to quit in between every new card been handled.\n",
+    "    \"\"\"\n",
     "    global round_break, game_break\n",
     "    \n",
     "    check = input(\"\\nPress Enter to continue... Or Q to quit.\")\n",
@@ -237,15 +277,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def card_points(card_chosen, deck=deck):\n",
-    "    \"\"\"This function returns the punctuation of each card (either draw by the player or the cpu)\n",
+    "    \"\"\"This function determines the punctuation of each card (either draw by the player or the cpu)\n",
     "    \n",
     "    Input: card to be evaluated and the deck dictionary\n",
-    "    Output: ponctuation of the card\n",
+    "    Output: punctuation of the card\n",
     "    \"\"\"\n",
     "    \n",
     "    #print(deck[card_chosen])\n",
@@ -277,39 +317,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "count_points('10-Clubs', deck)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "cards.remove('3-Clubs')\n",
-    "print(cards)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "def player_score():\n",
-    "    scores"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "def cpu_score():\n",
-    "    scores"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +340,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from IPython.display import Image\n",
+    "#Image(filename='9♥.jpg', width = 100)\n",
+    "\n",
+    "def show_cards(cards):\n",
+    "    \n",
+    "    cards_images = []\n",
+    "    files = glob.glob(\"/Users/oleoaraujo/Documents/Github/data-ft-par-labs/Projects/Week-1/your-project/*.jpg\")\n",
+    "\n",
+    "    for card in cards:\n",
+    "        for myFile in files:\n",
+    "            if myFile == \"/Users/oleoaraujo/Documents/Github/data-ft-par-labs/Projects/Week-1/your-project/\"+card+\".jpg\":\n",
+    "                image = cv2.imread(myFile)\n",
+    "                cards_images.append(image)\n",
+    "    \n",
+    "    ipyplot.plot_images(cards_images, max_images=20, img_width=100)\n",
+    "    \n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,23 +393,26 @@
     "    if draw_or_stop == \"DRAW\":\n",
     "        player_card = choice_of_cards(cards)\n",
     "        print(f\"Here's the card : {player_card}.\\n\")\n",
-    "        #Image(filename='2♠.jpg', width=100)\n",
     "        \n",
-    "        # Drawing a card from the deck: removing it from the deck and allocating it to the player:\n",
+    "        # Drawing a card from the deck: removing it from the deck and allocating it to the player\n",
     "        cards = cards.remove(player_card)\n",
     "        player_cards.append(player_card)\n",
-    "        ipyplot.plot_images(player_cards, max_images=20, img_width=150)\n",
-    "\n",
+    "        \n",
+    "        # Showing all the cards that have been drawn up to the player up until now\n",
+    "        show_cards(player_cards)\n",
+    "        \n",
     "        # Score updates\n",
     "        player_scores.append(card_points(player_card))\n",
     "        player_total_score = sum(score for score in player_scores)\n",
+    "        \n",
+    "        #Image(filename=player_card+'.jpg', width=100)\n",
     "    \n",
     "    return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,10 +427,12 @@
     "        print(\"**CPU TURN:**\")\n",
     "        print(\"A new card has been drawn to the CPU.\")\n",
     "        print(f\"Here's the card : {cpu_card}\\n\")\n",
-    "        Image(filename=cpu_card+'.jpg', width=100)\n",
     "        \n",
     "        cards = cards.remove(cpu_card)\n",
     "        cpu_cards.append(cpu_card)\n",
+    "        \n",
+    "        # Showing all the cards that have been drawn up to the player up until now\n",
+    "        show_cards(cpu_cards)\n",
     "        \n",
     "        # Score updates\n",
     "        cpu_scores.append(card_points(cpu_card))\n",
@@ -409,11 +448,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_round():\n",
+    "def print_turn():\n",
     "    \n",
     "    if game_break == True:\n",
     "        return None\n",
@@ -441,11 +480,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def round_winner():\n",
+    "def print_round_winner():\n",
     "    \n",
     "    global player_wins, cpu_wins, ties\n",
     "    \n",
@@ -487,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,11 +576,50 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " .----------------.  .----------------.  .----------------.  .----------------.  .----------------.\n",
+      "| .--------------. || .--------------. || .--------------. || .--------------. || .--------------. |\n",
+      "| |   ______     | || |   _____      | || |      __      | || |     ______   | || |  ___  ____   | |\n",
+      "| |  |_   _ \\    | || |  |_   _|     | || |     /  \\     | || |   .' ___  |  | || | |_  ||_  _|  | |\n",
+      "| |    | |_) |   | || |    | |       | || |    / /\\ \\    | || |  / .'   \\_|  | || |   | |_/ /    | |\n",
+      "| |    |  __'.   | || |    | |   _   | || |   / ____ \\   | || |  | |         | || |   |  __'.    | |\n",
+      "| |   _| |__) |  | || |   _| |__/ |  | || | _/ /    \\ \\_ | || |  \\ `.___.'\\  | || |  _| |  \\ \\_  | |\n",
+      "| |  |_______/   | || |  |________|  | || ||____|  |____|| || |   `._____.'  | || | |____||____| | |\n",
+      "| |              | || |              | || |              | || |              | || |              | |\n",
+      "| '--------------' || '--------------' || '--------------' || '--------------' || '--------------' |\n",
+      " '----------------'  '----------------'  '----------------'  '----------------'  '----------------'\n",
+      "\n",
+      "\n",
+      " .----------------.  .----------------.  .----------------.  .----------------.\n",
+      "| .--------------. || .--------------. || .--------------. || .--------------. |\n",
+      "| |     _____    | || |      __      | || |     ______   | || |  ___  ____   | |\n",
+      "| |    |_   _|   | || |     /  \\     | || |   .' ___  |  | || | |_  ||_  _|  | |\n",
+      "| |      | |     | || |    / /\\ \\    | || |  / .'   \\_|  | || |   | |_/ /    | |\n",
+      "| |   _  | |     | || |   / ____ \\   | || |  | |         | || |   |  __'.    | |\n",
+      "| |  | |_' |     | || | _/ /    \\ \\_ | || |  \\ `.___.'\\  | || |  _| |  \\ \\_  | |\n",
+      "| |  `.___.'     | || ||____|  |____|| || |   `._____.'  | || | |____||____| | |\n",
+      "| |              | || |              | || |              | || |              | |\n",
+      "| '--------------' || '--------------' || '--------------' || '--------------' |\n",
+      " '----------------'  '----------------'  '----------------'  '----------------'\n",
+      "\n",
+      "Choose the number of decks you would like to play with (from 1 to 8): \n",
+      "1\n",
+      "\n",
+      "Nice choice! Your deck has then 52 CARDS and here are the cards in your full deck:\n",
+      "['2♠', '3♠', '4♠', '5♠', '6♠', '7♠', '8♠', '9♠', '10♠', 'J♠', 'Q♠', 'K♠', 'A♠', '2♥', '3♥', '4♥', '5♥', '6♥', '7♥', '8♥', '9♥', '10♥', 'J♥', 'Q♥', 'K♥', 'A♥', '2♦', '3♦', '4♦', '5♦', '6♦', '7♦', '8♦', '9♦', '10♦', 'J♦', 'Q♦', 'K♦', 'A♦', '2♣', '3♣', '4♣', '5♣', '6♣', '7♣', '8♣', '9♣', '10♣', 'J♣', 'Q♣', 'K♣', 'A♣']\n"
+     ]
+    }
+   ],
    "source": [
     "# Looping each ROUND of play\n",
+    "welcome_screen()\n",
     "while game_break == False:\n",
-    "\n",
+    "    \n",
     "    # Reseting the main variables\n",
     "    reset_all()\n",
     "    \n",
@@ -549,6 +627,7 @@
     "    while round_break == False:\n",
     "        \n",
     "        player_turn(turn_number)\n",
+    "        time.sleep(1)\n",
     "        cpu_turn(turn_number)\n",
     "        \n",
     "        #check_winner()\n",
@@ -559,12 +638,12 @@
     "            round_break = True\n",
     "        \n",
     "        if len(cards) > 0 and game_break == False:\n",
-    "            print_round()\n",
+    "            print_turn()\n",
     "        \n",
     "        turn_number += 1\n",
     "        \n",
     "    if len(cards) >0 and game_break == False:\n",
-    "        round_winner()\n",
+    "        print_round_winner()\n",
     "    \n",
     "    round_number += 1\n",
     "    \n",
@@ -577,6 +656,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "def cpu_score():\n",
+    "    scores"
+   ]
   }
  ],
  "metadata": {
