--- a/Labs/module_3/9. Unsupervised-Learning/your-code/main.ipynb
+++ b/Labs/module_3/9. Unsupervised-Learning/your-code/main.ipynb
@@ -3033,28 +3033,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DBSCAN(eps=1000)"
+       "DBSCAN()"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dbscan_model = DBSCAN(eps=0.5)\n",
-    "dbscan_model.fit(customers_scale)"
+    "dbscan_model.fit(customers_scale.iloc[:,:4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -3102,7 +3102,7 @@
        "      <td>2674</td>\n",
        "      <td>1338</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3141,7 +3141,7 @@
        "      <td>507</td>\n",
        "      <td>1788</td>\n",
        "      <td>4</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3154,7 +3154,7 @@
        "      <td>1777</td>\n",
        "      <td>5185</td>\n",
        "      <td>5</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -3180,7 +3180,7 @@
        "      <td>182</td>\n",
        "      <td>2204</td>\n",
        "      <td>5</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>436</th>\n",
@@ -3193,7 +3193,7 @@
        "      <td>93</td>\n",
        "      <td>2346</td>\n",
        "      <td>4</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>437</th>\n",
@@ -3206,7 +3206,7 @@
        "      <td>14841</td>\n",
        "      <td>1867</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>438</th>\n",
@@ -3219,7 +3219,7 @@
        "      <td>168</td>\n",
        "      <td>2125</td>\n",
        "      <td>7</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>439</th>\n",
@@ -3232,7 +3232,7 @@
        "      <td>477</td>\n",
        "      <td>52</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3254,22 +3254,22 @@
        "439        1       3   2787   1698     2510      65               477   \n",
        "\n",
        "     Delicassen  labels  labels_DBSCAN  \n",
-       "0          1338       1              0  \n",
+       "0          1338       1             -1  \n",
        "1          1776       1              0  \n",
        "2          7844       1              0  \n",
-       "3          1788       4              0  \n",
-       "4          5185       5              0  \n",
+       "3          1788       4              1  \n",
+       "4          5185       5             -1  \n",
        "..          ...     ...            ...  \n",
-       "435        2204       5              0  \n",
-       "436        2346       4              0  \n",
-       "437        1867       1              0  \n",
-       "438        2125       7              0  \n",
-       "439          52       2              0  \n",
+       "435        2204       5             -1  \n",
+       "436        2346       4             -1  \n",
+       "437        1867       1             -1  \n",
+       "438        2125       7             -1  \n",
+       "439          52       2             -1  \n",
        "\n",
        "[421 rows x 10 columns]"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3288,14 +3288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of clusters: 1\n"
+      "Number of clusters: 5\n"
      ]
     }
    ],
@@ -3305,17 +3305,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    421\n",
+       "-1    281\n",
+       " 0     69\n",
+       " 1     62\n",
+       " 3      5\n",
+       " 2      4\n",
        "Name: labels_DBSCAN, dtype: int64"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
